sessionStorage remote on localStorage, and create select one group

--- a/src/components/WorkSpace/Sidebar/Groups/Groups.module.scss
+++ b/src/components/WorkSpace/Sidebar/Groups/Groups.module.scss
@@ -8,3 +8,10 @@
     align-items: center;
 }
 
+.wrapper::-webkit-scrollbar {
+    width: 2px;               /* ширина всей полосы прокрутки */
+  }
+  
+.wrapper::-webkit-scrollbar-track {
+    background: none;        /* цвет зоны отслеживания */
+  }
