--- a/src/components/WorkSpace/Sidebar/Groups/GroupItem/GroupItem.module.scss
+++ b/src/components/WorkSpace/Sidebar/Groups/GroupItem/GroupItem.module.scss
@@ -6,12 +6,19 @@
     margin-bottom: 3px;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     color: white;
+    border-radius: 10px;
 }
 
 .item:hover {
+    background-color: white;
+    color: #3182B9;
+}
+
+.item.active {
+    width: 95%;
     background-color: white;
     color: #3182B9;
 }
@@ -20,5 +27,12 @@
     text-align: center;
     font-size: 15px;
     font-weight: bold;
+    margin-left: 5px;
+}
+
+.item>img {
+    margin-left: 10px;
+    height: 25px;
+    width: 25px;
 }
 
