create NewGroupForm component

--- a/src/components/WorkSpace/Sidebar/ProfileCardMini/ProfileCardMini.module.scss
+++ b/src/components/WorkSpace/Sidebar/ProfileCardMini/ProfileCardMini.module.scss
@@ -23,7 +23,8 @@
     height: 80px;
     width: 80px;
     border-radius: 50%;
-    background: linear-gradient(#FFEB70, #F02262);
+    // background: linear-gradient(#FFEB70, #F02262);
+    background-color: #dbdbdb;
     border: 2px white solid;
 }
 
