--- a/src/components/WorkSpace/Sidebar/Sidebar.module.scss
+++ b/src/components/WorkSpace/Sidebar/Sidebar.module.scss
@@ -45,10 +45,26 @@
     height: 40px;
     width: 100%;
     color: #fff;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
 }
 
 .groupText>p{
     margin-left: 10px;
     font-weight: bold;
     font-size: 30px;
+}
+
+.addNewGroup {
+    margin-left: auto;
+    margin-right: 10px;
+    height: 35px;
+    width: 35px;
+}
+
+.addNewGroup>img {
+    height: 100%;
+    width: 100%;
 }
