--- a/src/components/WorkSpace/Sidebar/Sidebar.module.scss
+++ b/src/components/WorkSpace/Sidebar/Sidebar.module.scss
@@ -1,5 +1,5 @@
 .sidebarWrapper {
-    background-color: #3182B9;
+    background-color: #ffffff;
     width: 250px;
     height: 100vh;
     user-select: none;
@@ -23,15 +23,14 @@
     border-radius: 10px;
     width: 90%;
     height: 40px;
-    border: 2px solid #fff;
-    color: #fff;
+    color: #1c1c1a;
 }
 
 .sideMenuContainerItem>button:hover {
     width: 95%;
     height: 40px;
-    background-color: #fff;
-    color: #3182B9;
+    background-color: #f47c02;
+    color: #181816;
 }
 
 .sideMenuContainerItem>button.font {
@@ -44,7 +43,7 @@
 .groupText {
     height: 40px;
     width: 100%;
-    color: #fff;
+    color: #1c1c1a;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -65,6 +64,6 @@
 }
 
 .addNewGroup>img {
-    height: 100%;
-    width: 100%;
+    height: 70%;
+    width: 70%;
 }
