--- a/src/components/WorkSpace/Sidebar/Sidebar.module.scss
+++ b/src/components/WorkSpace/Sidebar/Sidebar.module.scss
@@ -18,9 +18,9 @@
 }
 
 .sideMenuContainerItem>button{
+    border: 1px solid #1c1c1a;
     margin-top: 5px;
     margin-bottom: 5px;
-    border-radius: 10px;
     width: 90%;
     height: 40px;
     color: #1c1c1a;
@@ -30,7 +30,7 @@
     width: 95%;
     height: 40px;
     background-color: #f47c02;
-    color: #181816;
+    color: #ffffff;
 }
 
 .sideMenuContainerItem>button.font {
@@ -57,6 +57,8 @@
 }
 
 .addNewGroup {
+    margin-top: 10px;
+    margin-bottom: auto;
     margin-left: auto;
     margin-right: 10px;
     height: 35px;
