--- a/src/components/WorkSpace/Header/Header.module.scss
+++ b/src/components/WorkSpace/Header/Header.module.scss
@@ -14,3 +14,12 @@
     font-size: 20px;
     font-weight: bold;
 }
+
+.defaultDiv {
+    height: 10px;
+    width: 10px;
+    background-color: #ffffff;
+    border-radius: 50%;
+    margin-left: auto;
+    margin-right: 50px;
+}
