--- a/src/components/WorkSpace/Header/Header.module.scss
+++ b/src/components/WorkSpace/Header/Header.module.scss
@@ -1,4 +1,5 @@
 .wrapper {
+    user-select: none;
     height: 50px;
     width: 95%;
     margin: 10px;
@@ -10,6 +11,7 @@
 }
 
 .wrapper>p {
+    width: 100px;
     margin-left: 50px;
     font-size: 20px;
     font-weight: bold;
